[package]
name = "rs_mirai_bot"
version = "0.1.0"
authors = ["Jacky <964413011@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# http request
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

#web socket client
tungstenite = "0.13.0"

# json
serde = "1.0.126"
serde_json = "1.0.64"